--- a/frontend/app/views/tier/cancel/confirm.scala.html
+++ b/frontend/app/views/tier/cancel/confirm.scala.html
@@ -25,27 +25,27 @@
                 <div class="l-row__item">
                     <div class="item">
                         <h3 class="item__title">Digital</h3>
-                        <ul>
-                            <li class="item__list-element">Vestibulum ante ipsum primis</li>
-                            <li class="item__list-element">Fusce non sagittis ligula</li>
+                        <ul class="item__list-element">
+                            <li>Vestibulum ante ipsum primis</li>
+                            <li>Fusce non sagittis ligula</li>
                         </ul>
                     </div>
                 </div>
                 <div class="l-row__item">
                     <div class="item">
                         <h3 class="item__title">Community</h3>
-                        <ul>
-                            <li class="item__list-element">Sit amet libero congue pulvinar</li>
-                            <li class="item__list-element">Vehicula tellus et, commodo</li>
+                        <ul class="item__list-element">
+                            <li>Sit amet libero congue pulvinar</li>
+                            <li>Vehicula tellus et, commodo</li>
                         </ul>
                     </div>
                 </div>
                 <div class="l-row__item">
                     <div class="item">
                         <h3 class="item__title">Live</h3>
-                        <ul>
-                            <li class="item__list-element">Donec rhoncus tristique</li>
-                            <li class="item__list-element">Leo congue imperdiet ultricies</li>
+                        <ul class="item__list-element">
+                            <li>Donec rhoncus tristique</li>
+                            <li>Leo congue imperdiet ultricies</li>
                         </ul>
                     </div>
                 </div>
@@ -73,11 +73,11 @@
                         <div class="u-responsive-ratio">
                             <img src="" alt=""/>
                         </div>
-                        <ul>
-                            <li class="item__list-element">Vestibulum ante ipsum primis</li>
-                            <li class="item__list-element">Fusce non sagittis ligula</li>
-                            <li class="item__list-element">Phasellus et urna non orci</li>
-                            <li class="item__list-element">Lorem ipsum dolor sit amet</li>
+                        <ul class="item__list-element">
+                            <li>Vestibulum ante ipsum primis</li>
+                            <li>Fusce non sagittis ligula</li>
+                            <li>Phasellus et urna non orci</li>
+                            <li>Lorem ipsum dolor sit amet</li>
                         </ul>
                     </div>
                 </div>
@@ -87,11 +87,11 @@
                         <div class="u-responsive-ratio">
                             <img src="" alt=""/>
                         </div>
-                        <ul>
-                            <li class="item__list-element">Sit amet libero congue pulvinar</li>
-                            <li class="item__list-element">Vehicula tellus et, commodo</li>
-                            <li class="item__list-element">Adipiscing in risus et consequat</li>
-                            <li class="item__list-element">Maecenas tincidunt auctor</li>
+                        <ul class="item__list-element">
+                            <li>Sit amet libero congue pulvinar</li>
+                            <li>Vehicula tellus et, commodo</li>
+                            <li>Adipiscing in risus et consequat</li>
+                            <li>Maecenas tincidunt auctor</li>
                         </ul>
                     </div>
                 </div>
@@ -101,11 +101,11 @@
                         <div class="u-responsive-ratio">
                             <img src="" alt=""/>
                         </div>
-                        <ul>
-                            <li class="item__list-element">Donec rhoncus tristique</li>
-                            <li class="item__list-element">Leo congue imperdiet ultricies</li>
-                            <li class="item__list-element">Non facilisis tellus mauris</li>
-                            <li class="item__list-element">Orci volutpat varius</li>
+                        <ul class="item__list-element">
+                            <li>Donec rhoncus tristique</li>
+                            <li>Leo congue imperdiet ultricies</li>
+                            <li>Non facilisis tellus mauris</li>
+                            <li>Orci volutpat varius</li>
                         </ul>
                     </div>
                 </div>
