import dates helper

--- a/frontend/app/views/tier/downgrade/summary.scala.html
+++ b/frontend/app/views/tier/downgrade/summary.scala.html
@@ -1,6 +1,7 @@
 @(subscription: model.Stripe.Subscription, card: model.Stripe.Card)(implicit request: play.api.mvc.Request[_])
 
 @import configuration.Config
+@import views.Dates._
 
 @main("Membership - Down Grade Tier Summary") {
 
