--- a/frontend/common/app/assets/stylesheets/components/_action.scss
+++ b/frontend/common/app/assets/stylesheets/components/_action.scss
@@ -120,7 +120,9 @@
 
 .action-cta--full-width-mobile {
     width: 100%;
+    vertical-align: middle;
     @include mq(tablet) {
         width: auto;
+        float: right;
     }
 }
