--- a/frontend/common/app/assets/stylesheets/module/facia/_items.scss
+++ b/frontend/common/app/assets/stylesheets/module/facia/_items.scss
@@ -244,10 +244,15 @@
     @include f-headline;
 }
 
-.item__list-element > li {
-    margin: $gs-baseline 0;
-    @include faux-bullet-point(#333333, $right-space: 4px);
+.item__list-element {
+    @include fs-bodyCopy(1);
+    list-style: none;
+    > li {
+        margin: $gs-baseline 0;
+        @include faux-bullet-point(#333333, $right-space: 4px);
+    }
 }
+
 
 .item--video,
 .item--gallery {
