made text at bottom of change page anchors

--- a/frontend/app/views/tier/change.scala.html
+++ b/frontend/app/views/tier/change.scala.html
@@ -81,11 +81,11 @@
             </div>
             <div class="content__container content__container--border-dark content__footer">
                 <ul class="inline-list">
-                    <li class="inline-list__item">FAQ</li>
+                    <li class="inline-list__item"><a href="#faq">FAQ</a></li>
                     <li class="inline-list__item">&#149;</li>
-                    <li class="inline-list__item">Email User help</li>
+                    <li class="inline-list__item"><a href="#help">Email User help</a></li>
                     <li class="inline-list__item">&#149;</li>
-                    <li class="inline-list__item">Cancel Membership</li>
+                    <li class="inline-list__item"><a href="#cancel">Cancel Membership</a></li>
                 </ul>
             </div>
         </div>
