--- a/frontend/common/app/assets/stylesheets/_content.scss
+++ b/frontend/common/app/assets/stylesheets/_content.scss
@@ -36,7 +36,7 @@
 .content__container {
     @include rem((
         padding-top: $gs-baseline,
-        margin: $gs-gutter * 2 0 $gs-gutter 0
+        margin-bottom: $gs-gutter
     ));
 }
 
