--- a/frontend/common/app/assets/stylesheets/pages/_tier.scss
+++ b/frontend/common/app/assets/stylesheets/pages/_tier.scss
@@ -19,18 +19,30 @@
 }
 
 .package-container__header {
-    padding-bottom: $gs-gutter;
+    @include rem((
+        padding-bottom: $gs-gutter,
+        margin-bottom: $gs-gutter * 4
+    ));
     border-bottom: 1px dotted #333333;
 }
 
 .package {
+    position: relative;
     @include border-radius(4px);
     background-color: #ffffff;
-    margin: $gs-gutter;
-    padding: $gs-gutter;
+    @include rem((
+        margin: $gs-gutter,
+        padding: $gs-gutter
+    ));
     @include mq(tablet) {
-        margin: 0 $gs-gutter / 2 0 0;
+        @include rem((
+            margin: 0 $gs-gutter / 2 0 0
+        ));
     }
+}
+
+.package--current {
+    background-color: #f2f2f2;
 }
 
 .package__title {
@@ -45,20 +57,24 @@
     border-bottom: 1px dotted #dcdcdc;
 }
 
-.package--current {
-    background-color: #f2f2f2;
-}
-
-
 .package__list-element {
     @include fs-bodyCopy(1);
+    @include rem((
+        padding: $gs-gutter/2 0 $gs-gutter
+    ));
     > li {
         list-style: none;
-        margin: $gs-baseline 0;
+        @include rem((
+            margin: $gs-baseline 0
+        ));
         @include faux-bullet-point(#333333, $right-space: 4px);
     }
 }
 
 .package__price {
     @include fs-headline(6);
+}
+
+.package__pcm {
+    @include fs-headline(1);
 }
