--- a/frontend/app/views/tier/change.scala.html
+++ b/frontend/app/views/tier/change.scala.html
@@ -3,6 +3,10 @@
 @import configuration.Config
 @import model.Tier
 
+@yourCurrentPackage = {
+    <div class="package__current-indicator">Your Current Package</div>
+}
+
 @main("Membership - Change Tier") {
 
 <div class="page-container">
@@ -25,55 +29,70 @@
                 <section class="l-row l-row--items-3">
                     <div class="l-row__item">
                         <div class="package@if(subscription.plan.tier == Tier.Friend){ package--current}">
-                            <h2 class="package__title">Friend</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis nec nulla dignissim laoreet ut ac odio.</p>
-                            <ul class="package__list-element">
-                                <li>Book Live event tickets</li>
-                            </ul>
-                            <div>
-                                <span class="package__price">£(Free)</span>
-                                @if(subscription.plan.tier != Tier.Friend) {
-                                    <a href="/tier/downgrade/confirm" class="action-cta action-cta--full-width-mobile action-cta--confirm">Select</a>
-                                }
+                            @if(subscription.plan.tier == Tier.Friend){
+                                @yourCurrentPackage
+                            }
+                            <div class="package__inner">
+                                <h2 class="package__title">Friend</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis nec nulla dignissim laoreet ut ac odio.</p>
+                                <ul class="package__list-element">
+                                    <li>Book Live event tickets</li>
+                                </ul>
+                                <div>
+                                    <span class="package__price">£(Free)</span>
+                                    @if(subscription.plan.tier != Tier.Friend){
+                                        <a href="/tier/downgrade/confirm" class="action-cta action-cta--full-width-mobile action-cta--confirm">Select</a>
+                                    }
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="l-row__item">
                         <div class="package@if(subscription.plan.tier == Tier.Partner){ package--current}">
-                            <h2 class="package__title">Partner</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis nec nulla dignissim laoreet ut ac odio. </p>
-                            <ul class="package__list-element">
-                                <li>Welcome pack</li>
-                                <li>Early booking for live events (1 week before general release)</li>
-                                <li>20% discount on tickets and plus ones</li>
-                                <li>20% discount on Masterclasses</li>
-                            </ul>
-                            <div>
-                                <span class="package__price">£15 <span class="package__pcm">pcm</span></span>
-                                @if(subscription.plan.tier != Tier.Partner) {
-                                    <a href="/tier/downgrade/confirm" class="action-cta action-cta--full-width-mobile action-cta--confirm">Select</a>
-                                }
+                            @if(subscription.plan.tier == Tier.Partner){
+                                @yourCurrentPackage
+                            }
+                            <div class="package__inner">
+                                <h2 class="package__title">Partner</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis nec nulla dignissim laoreet ut ac odio. </p>
+                                <ul class="package__list-element">
+                                    <li>Welcome pack</li>
+                                    <li>Early booking for live events (1 week before general release)</li>
+                                    <li>20% discount on tickets and plus ones</li>
+                                    <li>20% discount on Masterclasses</li>
+                                </ul>
+                                <div>
+                                    <span class="package__price">£15 <span class="package__pcm">pcm</span></span>
+                                    @if(subscription.plan.tier != Tier.Partner){
+                                        <a href="/tier/downgrade/confirm" class="action-cta action-cta--full-width-mobile action-cta--confirm">Select</a>
+                                    }
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="l-row__item">
                         <div class="package@if(subscription.plan.tier == Tier.Patron){ package--current}">
-                            <h2 class="package__title">Patron</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis nec nulla dignissim laoreet ut ac odio. </p>
-                            <ul class="package__list-element">
-                                <li>Patron pack</li>
-                                <li>Invited to patron only events</li>
-                                <li>Invited to annual patron forum</li>
-                                <li>Drinks from The Guardian wine rack</li>
-                                <li>Early booking for live events (2 weeks before general release)</li>
-                                <li>20% discount on tickets and plus ones</li>
-                                <li>20% discount on Masterclasses</li>
-                            </ul>
-                            <div>
-                                <span class="package__price">£60 <span class="package__pcm">pcm</span></span>
-                                @if(subscription.plan.tier != Tier.Patron) {
-                                    <a href="/tier/downgrade/confirm" class="action-cta action-cta--full-width-mobile action-cta--confirm">Select</a>
-                                }
+                            @if(subscription.plan.tier == Tier.Patron){
+                                @yourCurrentPackage
+                            }
+                            <div class="package__inner">
+                                <h2 class="package__title">Patron</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis nec nulla dignissim laoreet ut ac odio. </p>
+                                <ul class="package__list-element">
+                                    <li>Patron pack</li>
+                                    <li>Invited to patron only events</li>
+                                    <li>Invited to annual patron forum</li>
+                                    <li>Drinks from The Guardian wine rack</li>
+                                    <li>Early booking for live events (2 weeks before general release)</li>
+                                    <li>20% discount on tickets and plus ones</li>
+                                    <li>20% discount on Masterclasses</li>
+                                </ul>
+                                <div>
+                                    <span class="package__price">£60 <span class="package__pcm">pcm</span></span>
+                                    @if(subscription.plan.tier != Tier.Patron){
+                                        <a href="/tier/downgrade/confirm" class="action-cta action-cta--full-width-mobile action-cta--confirm">Select</a>
+                                    }
+                                </div>
                             </div>
                         </div>
                     </div>
