--- a/frontend/app/views/tier/change.scala.html
+++ b/frontend/app/views/tier/change.scala.html
@@ -104,7 +104,7 @@
                     <li class="inline-list__item">&#149;</li>
                     <li class="inline-list__item"><a href="#help">Email User help</a></li>
                     <li class="inline-list__item">&#149;</li>
-                    <li class="inline-list__item"><a href="#cancel">Cancel Membership</a></li>
+                    <li class="inline-list__item"><a href="/tier/cancel/confirm">Cancel Membership</a></li>
                 </ul>
             </div>
         </div>
