--- a/frontend/app/views/tier/downgrade/confirm.scala.html
+++ b/frontend/app/views/tier/downgrade/confirm.scala.html
@@ -7,11 +7,11 @@
         <div class="content__container">
             <section class="l-row l-row--items-2 content__section">
                 <article class="l-row__item l-row__item--boost-2 secondary-content">
-                    <h1 class="content__headline">Are you sure you would like to downgrade your account?</h1>
+                    <h1 class="content__headline">Are you sure?</h1>
                     <p class="item__title">You will no longer receive all the great benefits</p>
                 </article>
                 <aside class="l-row__item">
-                    <h2 class="content__heading tone-news-one">You will no longer receive all the great benefits</h2>
+                    <h2 class="content__heading tone-news-one">Become a friend</h2>
                 </aside>
             </section>
         </div>
@@ -69,9 +69,8 @@
                 <div class="l-row__item"></div>
                 <div class="l-row__item l-row__item--boost-2 secondary-content">
                     <form action="/tier/downgrade/confirm" method="POST">
-                        <h3 class="item__title">Proceed with downgrade?</h2>
-                        <a href="/tier/change" class="action-cta action-cta--cancel">No</a>
-                        <input type="submit" value="Yes" class="action-cta action-cta--confirm"/>
+                        <a href="/tier/change" class="action-cta action-cta--cancel">Back</a>
+                        <input type="submit" value="Continue" class="action-cta action-cta--confirm"/>
                     </form>
                 </div>
             </div>
