Take 'Membership' out of the page title, for Masterclasses
Most pages didn't have anything beyond "Membership" in the title, so I've
made this the default - other pages need a 'Some' to enclose the custom
suffix. Once more pages have custom titles, probably best just to make
the custom title text mandatory.

--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -1,7 +1,7 @@
 @(eventsList: Seq[model.Eventbrite.EBEvent])(implicit request: play.api.mvc.Request[_])
 @import views.Crumb
 
-@main("Membership") {
+@main() {
 
 @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Events", "/events")))
 
