--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -3,7 +3,7 @@
 @import views.Crumb
 @import configuration.Config
 
-@main("Membership") {
+@main() {
 
     @partials.crumb(Seq(Crumb("Home", "/")))
 
