--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -3,7 +3,7 @@
 @import views.html.joiner.payment.selectDates
 @import views.Format._
 
-@main("Membership") {
+@main() {
 
 <div class="page-container">
     <h1 class="section-headline">Payment</h1>
