--- a/frontend/app/views/joiner/tier/partner.scala.html
+++ b/frontend/app/views/joiner/tier/partner.scala.html
@@ -2,7 +2,7 @@
 
 @import views.Crumb
 
-@main("Membership") {
+@main() {
 
 @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/join"), Crumb("Become a Partner", "/join/partner")))
 
