--- a/frontend/app/views/joiner/tierList.scala.html
+++ b/frontend/app/views/joiner/tierList.scala.html
@@ -2,7 +2,7 @@
 
 @import views.Crumb
 
-@main("Membership") {
+@main() {
 
 @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/become-a-member")))
 
