--- a/frontend/app/views/tier/cancel/summary.scala.html
+++ b/frontend/app/views/tier/cancel/summary.scala.html
@@ -3,7 +3,7 @@
 @import configuration.Config
 @import views.Dates._
 
-@main("Membership - Down Grade Tier Summary") {
+@main(Some("Down Grade Tier Summary")) {
 
 <div class="page-container">
     <main role="main">
