--- a/frontend/app/views/tier/downgrade/confirm.scala.html
+++ b/frontend/app/views/tier/downgrade/confirm.scala.html
@@ -1,6 +1,6 @@
 @()(implicit request: play.api.mvc.Request[_])
 
-@main("Membership - Downgrade Tier") {
+@main(Some("Downgrade Tier")) {
 
 <div class="page-container">
     <main role="main">
