removed dateWithoutTime method and added pretty to end

--- a/frontend/app/views/tier/downgrade/summary.scala.html
+++ b/frontend/app/views/tier/downgrade/summary.scala.html
@@ -46,7 +46,7 @@
                                 Start Date
                             </td>
                             <td class="summary-table__cell">
-                                @dateWithoutTime(subscription.current_period_end)
+                                @subscription.current_period_end.pretty
                             </td>
                         </tr>
                         <tr class="summary-table__row" role="row">
