added logoUrl function to give us the logoUrl without protocol
updated views to reference new function

changed function to lazy val with a map

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -33,7 +33,7 @@
     <div class="event">
         <div class="event__content">
             <div class="event__image">
-                <img src="@event.logo_url" alt="Event Image" />
+                <img src="@event.logoUrl" alt="Event Image" />
             </div>
             <div class="event__content__inner">
                 <div class="event__content-body">
