--- a/frontend/app/views/partials/event/item.scala.html
+++ b/frontend/app/views/partials/event/item.scala.html
@@ -11,7 +11,7 @@
                     @if(event.getStatus == SoldOut){
                         <span class="event-status event-status--sold-out">Sold Out</span>
                     }
-                        <img src="@event.logo_url" alt="Event Image">
+                        <img src="@event.logoUrl" alt="Event Image">
                     </div>
                 </div>
                 <h2 class="item__title truncate">
